--- a/p3.html
+++ b/p3.html
@@ -16,11 +16,11 @@
                 <li>external css using external file by creating using <em>.css</em>extension</li>
             </ol></center>
             <h1>2)internal css using <b>style attribute</b>inside the head tag</h1>
-            <p>the internal css is for multiple elements but it is only foe single document  </p> 
+            <p>the internal css is for multiple elements but it is only for single document  </p> 
     
             <h2>this the second heading tag</h2>
             <h2>this the second heading tag</h2>
-             <hr>
+             <hr>   
     
              <h3>this the third heading tag</h3>
              <h3>this the third heading tag</h3>
