--- a/p5.html
+++ b/p5.html
@@ -64,6 +64,7 @@
 </center>
 
 <h1>element selectors</h1>
+<p>it style the entire parent elements</p>
 <section>
     <div>
         <h1>heading1</h1>
