--- a/css colors/p1.html
+++ b/css colors/p1.html
@@ -14,6 +14,7 @@
     <ul>
         <li>color keyword -like green ,red ,blue etc.</li>
         <li>Hexadecimal(2^8=256)value -like #000000,#ffffff and etc.</li>
+        <li>hexvalue</li>
         <li>RGB(red,green,blue)value -like rgb(255,0,0),rgb(255,255,255),rgb(0,0,0) etc.</li>
         <li>RGBA(red,green,blue,alpha)value -like rgb(255,0,0,0.5),rgb(255,255,255,0.5),rgb(0,0,0,0.5) etc.</li>
         <li>HSL(hue,saturation,lightness) value</li>
